@@ -1,5 +1,7 @@
 2007-04-04  Dmitry Galinsky  <dima.exe@gmail.com>
 
+	* rails-ruby.el (flymake-ruby-load): updated
+
 	* rails-ui.el: reduced the menu length
 
 2007-04-03  Dmitry Galinsky  <dima.exe@gmail.com>
